--- a/contacts.html
+++ b/contacts.html
@@ -34,7 +34,7 @@
                                 <button class="menu__btn"></button>
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="#" class="menu__list-link">Головна</a>
+                                        <a href="index.html" class="menu__list-link">Головна
                                     </li>
                                     <li class="menu__item"><a href="about_us.html" class="menu__list-link">Про Нас</a></li>
                                     <li class="menu__item"><a href="revier.html" class="menu__list-link">Огляд</a></li>
@@ -50,7 +50,7 @@
         </div>
     </header>
 
-    <section class="top">
+    <!-- <section class="top">
         <div class="container">
             <div class="top__heading">
                 <div class="top__content">
@@ -122,9 +122,38 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="rent">
+    <!-- <section class="benefits">
+        <div class="container">
+            <h3>Переваги</h3>
+            <div class="benefits__items">
+                <ul class="benefits__list">
+                    <li class="benefits__list-item">Щотижнева мийка</li>
+                    <li class="benefits__list-item">Потужний двигун</li>
+                    <li class="benefits__list-item">Преміум автівки</li>
+                    <li class="benefits__list-item">підтримка 24/7</li>
+                    <li class="benefits__list-item">пальне враховано</li>
+                    <li class="benefits__list-item">паркування у всіх районах</li>
+                    <li class="benefits__list-item">щомісячне ТО автівок</li>
+                </ul>
+                <img src="images/benefits.png" alt="" class="benefits__images">
+                <div class="benefits__content">
+                    <p class="benefits__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, at natus
+                        temporibus dolore error voluptatibus?
+                    </p>
+                    <p class="benefits__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, autem.
+                    </p>
+                    <a data-fancybox
+                        href="https://www.youtube.com/watch?v=tepVIbCxjRU&list=PLWuPdIzAqBUiMnOSoJzwt3OHjVm2edPsm&index=17"
+                        class="video-popup" >
+                        Переглянути<br>презентацію
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+    </section><section class="rent">
         <div class="container">
             <div class="rent__inner">
                 <div class="rent__content">
@@ -160,39 +189,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Додаю третю секцію з 14 уроку -->
 
-    <section class="benefits">
-        <div class="container">
-            <h3>Переваги</h3>
-            <div class="benefits__items">
-                <ul class="benefits__list">
-                    <li class="benefits__list-item">Щотижнева мийка</li>
-                    <li class="benefits__list-item">Потужний двигун</li>
-                    <li class="benefits__list-item">Преміум автівки</li>
-                    <li class="benefits__list-item">підтримка 24/7</li>
-                    <li class="benefits__list-item">пальне враховано</li>
-                    <li class="benefits__list-item">паркування у всіх районах</li>
-                    <li class="benefits__list-item">щомісячне ТО автівок</li>
-                </ul>
-                <img src="images/benefits.png" alt="" class="benefits__images">
-                <div class="benefits__content">
-                    <p class="benefits__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, at natus
-                        temporibus dolore error voluptatibus?
-                    </p>
-                    <p class="benefits__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, autem.
-                    </p>
-                    <a data-fancybox
-                        href="https://www.youtube.com/watch?v=tepVIbCxjRU&list=PLWuPdIzAqBUiMnOSoJzwt3OHjVm2edPsm&index=17"
-                        class="video-popup" >
-                        Переглянути<br>презентацію
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 
     <section class="feedback">
         <div class="container">
