--- a/about_us.html
+++ b/about_us.html
@@ -28,7 +28,7 @@
                     <div class="header">
                         <div class="header__inner">
                             <a href="#" class="logo">
-                                <img src="images/Ukraine_life.jpg" alt="" class="logo__link__link">
+                                <img src="images/logo.png" alt="" class="logo__link__link">
                             </a>
                             <nav class="menu">
                                 <button class="menu__btn"></button>
