--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
                     <div class="header">
                         <div class="header__inner">
                             <a href="#" class="logo">
-                                <img src="images/Ukraine_life.jpg" alt="" class="logo__link__link">
+                                <img src="images/logo.png" alt="" class="logo__link__link">
                             </a>
                             <nav class="menu">
                                 <button class="menu__btn"></button>
@@ -38,7 +38,7 @@
                                     </li>
                                     <li class="menu__item"><a href="about_us.html" class="menu__list-link">Про Нас</a></li>
                                     <li class="menu__item"><a href="revier.html" class="menu__list-link">Огляд</a></li>
-                                    <li class="menu__item"><a href="#" class="menu__list-link">Умови</a></li>
+                                    <li class="menu__item"><a href="umovi-praci.html" class="menu__list-link">Умови</a></li>
                                     <li class="menu__item"><a href="contacts.html" class="menu__list-link">Контакти</a></li>
                                 </ul>
                             </nav>
@@ -198,7 +198,7 @@
     <section class="feedback">
         <div class="container">
             <div class="feedback__inner">
-                <img src="images/feedback.png" alt="Шевроле Камаро" class="feedback__images">
+                <img src="images/autopark.png" alt="Шевроле Камаро" class="feedback__images">
                 <form action="" class="feedback__form">
                     <h3 class="feedback__title">Лишилися питання?</h3>
                     <p class="feedback__text">зателефонуємо та проконсультуємо</p>
