--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="header">
                         <div class="header__inner">
                             <a href="#" class="logo">
-                                <img src="images/Ukraine_life.jpg" alt="" class="logo__link__link">
+                                <img src="images/logo.png" alt="" class="logo__link__link">
                             </a>
                             <nav class="menu">
                                 <button class="menu__btn"></button>
@@ -38,7 +38,7 @@
                                     </li>
                                     <li class="menu__item"><a href="about_us.html" class="menu__list-link">Про Нас</a></li>
                                     <li class="menu__item"><a href="revier.html" class="menu__list-link">Огляд</a></li>
-                                    <li class="menu__item"><a href="#" class="menu__list-link">Умови</a></li>
+                                    <li class="menu__item"><a href="umovi-praci.html" class="menu__list-link">Умови</a></li>
                                     <li class="menu__item"><a href="contacts.html" class="menu__list-link">Контакти</a></li>
                                 </ul>
                             </nav>
@@ -54,9 +54,9 @@
         <div class="container">
             <div class="top__heading">
                 <div class="top__content">
-                    <h1 class="top__title">Автопрокату столиці Люкс автівок</h1>
+                    <h1 class="top__title">Українські водії в Європі</h1>
                     <p class="top__text">
-                        Замов ексклюзивний автомобіль на прокат через додаток в будь-якій точці міста
+                        Одні з найкражих водіїв світу є Українські водії
                     </p>
                     <a href="#" class="application-btn">
                         завантажити
@@ -64,31 +64,31 @@
                 </div>
                 <div class="top__slider">
                     <div class="top__slider-item">
-                        <img src="images/benefits.png" alt="Слайди автівок">
+                        <img src="images/sedelnyj-tyagach.png" alt="Слайди автівок">
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
                         </p>
                     </div>
                     <div class="top__slider-item">
-                        <img src="images/mercedes.png" alt="Слайди автівок">
+                        <img src="images/motor-sedelnyj-tyagach.png" alt="Слайди автівок">
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
                         </p>
                     </div>
                     <div class="top__slider-item">
-                        <img src="images/benefits.png" alt="Слайди автівок">
+                        <img src="images/sedelnyj-tyagach_scania.png" alt="Слайди автівок">
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
                         </p>
                     </div>
                     <div class="top__slider-item">
-                        <img src="images/mercedes.png" alt="Слайди автівок">
+                        <img src="images/sedelnyj-tyagach-volvo.png" alt="Слайди автівок">
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
                         </p>
                     </div>
                     <div class="top__slider-item">
-                        <img src="images/benefits.png" alt="Слайди автівок">
+                        <img src="images/artage-io-thumb.png" alt="Слайди автівок">
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
                         </p>
@@ -100,24 +100,23 @@
                     <div class="top__item">
                         <img src="images/icon-1.svg" alt="Автомобіль" class="top__item-img">
                         <p class="top__item-text">
-                            500+автівок для Вашої уваги
+                            5000+водіїв з України
                         </p>
                     </div>
                     <div class="top__item">
                         <img src="images/icon-2.svg" alt="Кредитна картка" class="top__item-img">
-                        <p class="top__item-text">
-                            Дешевше за таксі та власне авто
-                        </p>
+                        <p class="top__item-text">Краща оплата праці ніж в Україні
+                            </p>
                     </div>
                     <div class="top__item">
                         <img src="images/icon-3.svg" alt="Мапа" class="top__item-img">
                         <p class="top__item-text">
-                            Найкращі авто у будь-якій точці міста
+                            Найкращі автомобілі європи
                         </p>
                     </div>
                 </div>
                 <div class="top__links">
-                    <a href="#" class="top__link">Умови оренди автівок</a>
+                    <a href="#" class="top__link">Умови для праці</a>
                     <a href="#" class="top__link">Публічна угода</a>
                 </div>
             </div>
@@ -128,35 +127,53 @@
         <div class="container">
             <div class="rent__inner">
                 <div class="rent__content">
-                    <h3 class="rent__title">Заголовок</h3>
-                    <p class="rent__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus odit ea
-                        impedit velit nesciunt eius, quod nostrum a soluta eaque reprehenderit dignissimos quis sit
-                        deserunt obcaecati, quos ab sed perspiciatis?</p>
-                    <p class="rent__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ex quidem veniam
-                        dolorem saepe ab, ducimus delectus. Libero, dolor, dolorum ducimus odio officia ex asperiores
-                        reprehenderit totam, quo in modi?</p>
+                    <h3 class="rent__title">Водій-міжнародник категорії С+Є з досвідом</h3>
+                    <p class="rent__text">✅ Заробітна плата від 2000 €<br>
+                        ✅ Офіційне працевлаштування за трудовим договором до європейської транспортної компанії.<br>
+                        ✅ Графік роботи - 6/2, 8/2.<br>
+                        ✅ Можливість узгодження довших термінів.<br>
+                        ✅ Нові автомобілі DAF, Mercedes (euro 6), напівпричепи — тент та холодильник<br>
+                        ✅ Російськомовні диспетчери.<br>
+                        ✅ На період перебування забезпечення соціальним житлом.<br>
+                        ✅ Соціальний пакет
+                        </p>
+                    <p class="rent__text">✅ За необхідності можливість оформити дозвіл на проживання.<br>
+                        ✅ Можливість навчання на КОД-95 з проживанням та стажуванням на базі головного офісу у Литві.<br>
+                        ✅ Можливість роботи у подвійному екіпажі.</p>
                     <a href="#" class="application-btn">Завантажити</a>
                 </div>
                 <div class="rent__item">
                     <div class="rent__item-num">01</div>
-                    <p class="rent__item-title">Досвід водіння<br>від 2х років</p>
-                    <p class="rent__item-text"></p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil
-                    veniam impedit iusto velit iste officia, repellat repudiandae voluptatum molestias ea aspernatur?
-                    Recusandae, blanditiis ad.
+                    <p class="rent__item-title">Досвід водіння<br>від 3х років</p>
+                    <p class="rent__item-text"></p>ВИМОГИ:
+                    ▪ посвідчення водія категорії С+Є;
+                    ▪ Європейський Паспорт (Румунія, Болгарія, Латвія, Литва, Польща тощо)
+                    ▪ ADR базовий (у разі відсутності забезпечуємо можливість швидкого навчання, навчитися можна тут)
+                    ▪ Вік до 55 років.
+                    ▪ Перевага – досвід роботи в ЄС від 3 років
                 </div>
                 <div class="rent__item">
                     <div class="rent__item-num">02</div>
-                    <p class="rent__item-title">Тільки<br>в межах столиці</p>
-                    <p class="rent__item-text"></p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati,
-                    suscipit illo eos deserunt vitae ab a ipsa laborum. Ut atque eveniet quam ea placeat dolorem porro
-                    iusto provident at reprehenderit.
+                    <p class="rent__item-title">Без досвіду<br>по Європі</p>
+                    <p class="rent__item-text"></p>ВИМОГИ:
+                    ▪ посвідчення водія категорії С+Е, досвід більше 1 року;
+                    ▪ Наявність закордонних паспортів (Дуже добре, якщо є Європейський паспорт — Румунія, Болгарія, Латвія, Литва, Польща тощо)
+                    ▪ADR базовий (у разі відсутності забезпечуємо можливість швидкого навчання, навчитися можна тут)
+                    ▪ Вік до 55 років.
                 </div>
                 <div class="rent__item">
                     <div class="rent__item-num">03</div>
-                    <p class="rent__item-title">Смартфон<br>та інтернет</p>
-                    <p class="rent__item-text"></p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta odit
-                    vero dolorem similique vitae! Vel, eos! Obcaecati voluptas doloribus recusandae architecto, vero
-                    sunt dolores pariatur at.
+                    <p class="rent__item-title">Диспетчер із знанням <br>Болгарської мови</p>
+                    <p class="rent__item-text"></p>✅ Старт зарплати від 800 €<br>
+                    ✅ Європейські умови праці.<br>
+                    ✅ Спілкування з водіями болгарською мовою<br>
+                    ✅ Можливість кар'єрного зростання<br>
+                    ✅ Візова та документальна підтримка<br>
+                    
+                    ВИМОГИ:
+                    ▪ Досвід роботи у логістичній компанії;
+                    ▪ Хороше знання болгарської мови
+                    ▪ Перевагою є знання англійської та російської мов
                 </div>
             </div>
         </div>
