--- a/umovi-praci.html
+++ b/umovi-praci.html
@@ -48,28 +48,29 @@
                 </div>
             </header>
         </div>
+        
     </header>
 
-    <section class="top">
+        <section class="top">
         <div class="container">
             <div class="top__heading">
                 <div class="top__content">
-                    <h1 class="top__title">Автопрокату столиці Люкс автівок</h1>
-                    <p class="top__text">
-                        Замов ексклюзивний автомобіль на прокат через додаток в будь-якій точці міста
+                    <h2 class="top__title">Умови праці для водіїв</h2>
+                    <p class="top__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores, illum fugiat, aliquam repudiandae ipsa repellat excepturi provident necessitatibus architecto possimus, quis neque nisi odio accusantium ullam maxime modi sit.
+                    Aliquam placeat, nulla ad sequi aut id tempore ipsum quia impedit cumque vel architecto in facere quaerat beatae, voluptate quas cupiditate qui at quidem dicta inventore! Facere dolores cupiditate aliquam!
                     </p>
-                    <a href="#" class="application-btn">
+                    <!-- <a href="#" class="application-btn">
                         завантажити
-                    </a>
+                    </a> -->
                 </div>
                 <div class="top__slider">
                     <div class="top__slider-item">
-                        <img src="images/benefits.png" alt="Слайди автівок">
+                        <img src="images/europe-map.png" alt="Слайди автівок">
                         <p class="top__slide-text">
-                            <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
+                            <span>Текст</span><span>Текст</span><span>Текст</span>
                         </p>
                     </div>
-                    <div class="top__slider-item">
+                    <!-- <div class="top__slider-item">
                         <img src="images/mercedes.png" alt="Слайди автівок">
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
@@ -92,9 +93,9 @@
                         <p class="top__slide-text">
                             <span>4грн/хв</span><span>5 місяців</span><span>50 тис. км</span>
                         </p>
-                    </div>
+                    </div> -->
                 </div>
-            </div>
+            <!-- </div>
             <div class="top__bottom">
                 <div class="top__items">
                     <div class="top__item">
@@ -120,7 +121,7 @@
                     <a href="#" class="top__link">Умови оренди автівок</a>
                     <a href="#" class="top__link">Публічна угода</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
