--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
                      <ul class="right top-ul chevron">
                         <li><a href="index.html">Головна</a>
                         </li>
-                        <li><a href="./product.html">Статті</a>
+                        <li><a href="./novini.html">Статті</a>
                         </li>
                         <!-- <li><a href="../design/services.html">Services</a>
                         </li> -->
