--- a/Головна.html
+++ b/Головна.html
@@ -201,39 +201,40 @@ border-color: #404040 !important; border-width: 2px !important; borders: top rig
                   <span class="u-meta-comments u-meta-icon"><!--blog_post_metadata_comments_content-->Коментарі (1)<!--/blog_post_metadata_comments_content--></span><!--/blog_post_metadata_comments-->
                 </div><!--/blog_post_metadata--><!--blog_post_content-->
                 <div class="u-align-left-lg u-align-left-md u-align-left-sm u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Приклад короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                <a href="blog/пост-6.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Read More","defaultValue":"Читать дальше"}--><!--/options_json-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                <a href="blog/пост-6.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Read More","defaultValue":"Читать дальше"}--><!--/options_json-->Більше...<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-align-left-xs u-blog-post u-container-style u-repeater-item u-video-cover u-white">
               <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-top-xl u-container-layout-3">
                 <a class="u-post-header-link" href="blog/пост-5.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="images/2.jpeg"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="images/церква_у_Завадові.jpg"><!--/blog_post_image-->
                 </a><!--blog_post_header-->
                 <h4 class="u-align-left-lg u-align-left-md u-align-left-sm u-blog-control u-text u-text-5">
-                  <a class="u-post-header-link" href="blog/пост-5.html"><!--blog_post_header_content-->Заголовок 6-го поста<!--/blog_post_header_content--></a>
+                  <a class="u-post-header-link" href="blog/пост-5.html"><!--blog_post_header_content-->
+                    Церква Різдва Пресвятої Богородиці с. Завадів<!--/blog_post_header_content--></a>
                 </h4><!--/blog_post_header--><!--blog_post_metadata-->
                 <div class="u-blog-control u-metadata u-text-grey-40 u-metadata-3"><!--blog_post_metadata_date-->
-                  <span class="u-meta-date u-meta-icon"><!--blog_post_metadata_date_content-->Fri Dec 24 2021<!--/blog_post_metadata_date_content--></span><!--/blog_post_metadata_date--><!--blog_post_metadata_comments-->
-                  <span class="u-meta-comments u-meta-icon"><!--blog_post_metadata_comments_content-->Comments (0)<!--/blog_post_metadata_comments_content--></span><!--/blog_post_metadata_comments-->
+                  <span class="u-meta-date u-meta-icon"><!--blog_post_metadata_date_content-->11 01 2022<!--/blog_post_metadata_date_content--></span><!--/blog_post_metadata_date--><!--blog_post_metadata_comments-->
+                  <span class="u-meta-comments u-meta-icon"><!--blog_post_metadata_comments_content-->Коментарі (0)<!--/blog_post_metadata_comments_content--></span><!--/blog_post_metadata_comments-->
                 </div><!--/blog_post_metadata--><!--blog_post_content-->
                 <div class="u-align-left-lg u-align-left-md u-align-left-sm u-blog-control u-post-content u-text u-text-6"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                <a href="blog/пост-5.html" class="u-blog-control u-btn u-button-style u-btn-3"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Read More","defaultValue":"Читать дальше"}--><!--/options_json-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                <a href="blog/пост-5.html" class="u-blog-control u-btn u-button-style u-btn-3"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Read More","defaultValue":"Читать дальше"}--><!--/options_json-->Більше...<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-align-left-xs u-blog-post u-container-style u-repeater-item u-video-cover u-white">
               <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-top-xl u-container-layout-4">
                 <a class="u-post-header-link" href="blog/пост-4.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/3.jpeg"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/озеро_зашків_і_ліс.png"><!--/blog_post_image-->
                 </a><!--blog_post_header-->
                 <h4 class="u-align-left-lg u-align-left-md u-align-left-sm u-blog-control u-text u-text-7">
-                  <a class="u-post-header-link" href="blog/пост-4.html"><!--blog_post_header_content-->Заголовок 5-го поста<!--/blog_post_header_content--></a>
+                  <a class="u-post-header-link" href="blog/пост-4.html"><!--blog_post_header_content-->Зашківське озеро<!--/blog_post_header_content--></a>
                 </h4><!--/blog_post_header--><!--blog_post_metadata-->
                 <div class="u-blog-control u-metadata u-text-grey-40 u-metadata-4"><!--blog_post_metadata_date-->
-                  <span class="u-meta-date u-meta-icon"><!--blog_post_metadata_date_content-->Fri Dec 24 2021<!--/blog_post_metadata_date_content--></span><!--/blog_post_metadata_date--><!--blog_post_metadata_comments-->
-                  <span class="u-meta-comments u-meta-icon"><!--blog_post_metadata_comments_content-->Comments (0)<!--/blog_post_metadata_comments_content--></span><!--/blog_post_metadata_comments-->
+                  <span class="u-meta-date u-meta-icon"><!--blog_post_metadata_date_content-->11 01 2022<!--/blog_post_metadata_date_content--></span><!--/blog_post_metadata_date--><!--blog_post_metadata_comments-->
+                  <span class="u-meta-comments u-meta-icon"><!--blog_post_metadata_comments_content-->Коментарі (0)<!--/blog_post_metadata_comments_content--></span><!--/blog_post_metadata_comments-->
                 </div><!--/blog_post_metadata--><!--blog_post_content-->
                 <div class="u-align-left-lg u-align-left-md u-align-left-sm u-blog-control u-post-content u-text u-text-8"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                <a href="blog/пост-4.html" class="u-blog-control u-btn u-button-style u-btn-4"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Read More","defaultValue":"Читать дальше"}--><!--/options_json-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                <a href="blog/пост-4.html" class="u-blog-control u-btn u-button-style u-btn-4"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Read More","defaultValue":"Читать дальше"}--><!--/options_json-->Більше...<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
               </div>
             </div><!--/blog_post-->
           </div>
@@ -358,7 +359,7 @@ border-color: #404040 !important; border-width: 2px !important; borders: top rig
                   <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-20 u-video u-video-1">
                     <div class="u-background-video u-expanded" style="">
                       <div class="embed-responsive embed-responsive-1">
-                        <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/watch?v=Cq74-li_tBM" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+                        <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/Cq74-li_tBM?controls=0" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
                       </div>
                     </div>
                     <div class="u-container-layout u-container-layout-3"></div>
