--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Головна">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Головна.html" data-home-page-title="Головна" class="u-body u-stick-footer"><header class="u-clearfix u-grey-75 u-header u-header" id="sec-a7f6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Головна.html" data-home-page-title="Головна" class="u-body u-stick-footer"><header class="u-clearfix u-grey-75 u-header u-header" id="sec-a7f6"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="150" data-image-height="150">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -257,87 +257,15 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-section-5" id="sec-f074">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-align-left u-expanded-width u-left-0 u-video u-video-1">
+    <section class="u-align-center u-clearfix u-palette-1-base u-section-5" id="sec-688c">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-middle-xs u-sheet-1">
+        <div class="u-align-left u-expanded-width-sm u-expanded-width-xs u-video u-video-1">
           <div class="embed-responsive embed-responsive-1">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/fwyyhEpFXcM?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
-        </div><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
-        <div class="u-blog u-container-style u-expanded-width u-layout-horizontal u-blog-1">
-          <div class="u-list-control"></div>
-          <div class="u-repeater u-repeater-1"><!--blog_post-->
-            <div class="u-blog-post u-container-style u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-1"><!--blog_post_header-->
-                <h2 class="u-blog-control u-custom-font u-font-roboto-slab u-text">
-                  <a class="u-post-header-link" href="blog/пост-5.html"><!--blog_post_header_content-->Заголовок 6-го поста<!--/blog_post_header_content--></a>
-                </h2><!--/blog_post_header-->
-                <a class="u-post-header-link" href="blog/пост-5.html"><!--blog_post_image-->
-                  <img src="images/____.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1"><!--/blog_post_image-->
-                </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content-->
-              </div>
-            </div><!--/blog_post--><!--blog_post-->
-            <div class="u-blog-post u-container-style u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-2"><!--blog_post_header-->
-                <h2 class="u-blog-control u-custom-font u-font-roboto-slab u-text">
-                  <a class="u-post-header-link" href="blog/пост-4.html"><!--blog_post_header_content-->Заголовок 5-го поста<!--/blog_post_header_content--></a>
-                </h2><!--/blog_post_header-->
-                <a class="u-post-header-link" href="blog/пост-4.html"><!--blog_post_image-->
-                  <img src="images/___.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" data-image-width="800" data-image-height="600"><!--/blog_post_image-->
-                </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content-->
-              </div>
-            </div><!--/blog_post--><!--blog_post-->
-            <div class="u-blog-post u-container-style u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-3"><!--blog_post_header-->
-                <h2 class="u-blog-control u-custom-font u-font-roboto-slab u-text">
-                  <a class="u-post-header-link" href="blog/пост-3.html"><!--blog_post_header_content-->Заголовок 4-го поста<!--/blog_post_header_content--></a>
-                </h2><!--/blog_post_header-->
-                <a class="u-post-header-link" href="blog/пост-3.html"><!--blog_post_image-->
-                  <img src="images/_.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3" data-image-width="720" data-image-height="480"><!--/blog_post_image-->
-                </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content-->
-              </div>
-            </div><!--/blog_post--><!--blog_post-->
-            <div class="u-blog-post u-container-style u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-4"><!--blog_post_header-->
-                <h2 class="u-blog-control u-custom-font u-font-roboto-slab u-text">
-                  <a class="u-post-header-link" href="blog/пост-2.html"><!--blog_post_header_content-->Заголовок 3-го поста<!--/blog_post_header_content--></a>
-                </h2><!--/blog_post_header-->
-                <a class="u-post-header-link" href="blog/пост-2.html"><!--blog_post_image-->
-                  <img src="images/3.jpeg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4"><!--/blog_post_image-->
-                </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content-->
-              </div>
-            </div><!--/blog_post-->
-          </div>
-          <div class="u-list-control"></div>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-          </a>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-          </a>
-        </div><!--/blog-->
+        </div>
+        <h2 class="u-text u-text-default u-text-1">Sample Headline</h2>
+        <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
       </div>
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-clearfix u-section-6" data-image-width="2000" data-image-height="1333" id="sec-db02">
