--- a/Галерея.html
+++ b/Галерея.html
@@ -45,18 +45,18 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Головна.html" style="padding: 10px 0px;">Головна</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Галерея.html" style="padding: 10px 0px;">Галерея</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Розваги.html" style="padding: 10px 0px;">Розваги</a>
+            <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="/Головна.html" style="padding: 10px 0px;">Головна</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="/Галерея.html" style="padding: 10px 0px;">Галерея</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="/Розваги.html" style="padding: 10px 0px;">Розваги</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Головна.html" style="padding: 10px 0px;">Головна</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Галерея.html" style="padding: 10px 0px;">Галерея</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Розваги.html" style="padding: 10px 0px;">Розваги</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Головна.html" style="padding: 10px 0px;">Головна</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Галерея.html" style="padding: 10px 0px;">Галерея</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Розваги.html" style="padding: 10px 0px;">Розваги</a>
 </li></ul>
               </div>
             </div>
